[project]
name = "ire-osrm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "osrm-bindings>=0.3.0",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://<INTERNAL-PYPI-REGISTRY>/repository/pypi-group/simple"
default = true